syntax = "proto2";

package com.google.idea.blaze.ext.perforce;

import "ext/proto/perforce/base.proto";

option java_package = "com.google.idea.blaze.ext.p4";
option java_outer_classname = "WorkspaceProto";

message Workspace {
  optional WorkspaceId workspace_id = 1;
  optional string citc_alias = 15;
  optional string user_name = 2;
  optional string host_name = 3;
  optional string description = 4;
  optional int64 update_time_micros = 5;
  optional int64 access_time_micros = 6;

  repeated string root_directories = 7;
  optional bool all_files_writable = 9 [default = true];
  optional bool clobber_files = 10 [default = false];
  optional bool preserve_file_modtime = 11 [default = false];
  optional bool remove_empty_directories = 12 [default = false];
  optional bool multichange = 13 [default = false];

  message ViewMapping {
    optional bool exclude = 1 [default = false];
    optional string depot_path = 2;
    optional string workspace_path = 3;
  }
  repeated ViewMapping view_mappings = 14;

  optional OverlayBranchId overlay_branch_id = 16;
  optional ChangeId sync_change_id = 17;
}